--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,13 +13,15 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        externalNativeBuild {
-            cmake {
-                cppFlags ''
-            }
-        }
+         externalNativeBuild {
+             cmake {
+                 cppFlags ''
+             }
+         }
+//        ndk {
+//            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+//        }
     }
 
     buildTypes {
@@ -42,8 +44,4 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
